@@ -1,3 +1,7 @@
+2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Switch to new connector service registration API, resolves #12
+
 2022-12-15 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Add driver class option to connector parameters (thanks to Christian Toffolo)
